--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             <h4>대학교</h4>
             <h5>2016 - 2021</h5>
             <p><em>한서대학교, 항공전기과</em></p>
-            <p>컴공을 희망했던 어린 아이는 지원하기 직전 실시간 경쟁률이 전자공학과가 컴공보다 낮아 그 순간 기지를 발휘해 전자공학과를 지원하게 되었고 합격했다.<br> 이후 술에 눈을 뜨게 되어... 낮은 학점으로 1학년을 마친 후 군대를 갔다오고 정신 차린 뒤 학점 멘징하느라 뼈빠지게 고생했다...</p>
+            <p>컴공을 희망했던 어린 아이는 지원하기 직전 실시간 경쟁률이 전자공학과가 컴공보다 낮아 그 순간 기지를 발휘해 전자공학과를 지원하게 되었고 합격했다.<br> 이후 술에 눈을 뜨게 되어... 낮은 학점으로 1학년을 마친 터라 군대 다녀온 후 정신 차린 뒤 학점 멘징하느라 뼈빠지게 고생했다... <br><br> 군대를 다녀오니 박근혜의 '프라임 사업'을 통해 기존 [전자공학과] -> [항공전기과] 로 이름이 바뀌었고 이는 커리큘럼에도 영향이 있었다. 때문에 애매하게 프로그래밍을 배우고 애매하게 전자 전기 교육을 받게 되었다. <br><br> 그렇기에 이대론 안되겠다 싶어 4-2학기 당시 프로그래밍 교육을 받고 싶었고 이후 임베디드쪽으로 나아가기 위해 </p>
           </div>
         </div>
         <div class="col-lg-6">
