--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3> 프로그래머</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            항상 밝고 웃으며, 모든이와 협업할 수 있는 사람입니다.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -108,7 +107,25 @@
             </div>
           </div>
           <p>
-            얄리얄리얄랴숑 얄랴리얄라
+            <p>기술</p>
+            <img src="https://img.shields.io/badge/c-%2300599C.svg?style=for-the-badge&logo=c&logoColor=white">
+            <img src="https://img.shields.io/badge/c++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white">
+            <img src="https://img.shields.io/badge/java-007396?style=for-the-badge&logo=java&logoColor=white"> 
+            <img src="https://img.shields.io/badge/python-3776AB?style=for-the-badge&logo=python&logoColor=white">
+            <br><br>
+            <img src="https://img.shields.io/badge/html5-E34F26?style=for-the-badge&logo=html5&logoColor=white"> 
+            <img src="https://img.shields.io/badge/css-1572B6?style=for-the-badge&logo=css3&logoColor=white"> 
+            <img src="https://img.shields.io/badge/javascript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black">
+            <img src="https://img.shields.io/badge/bootstrap-7952B3?style=for-the-badge&logo=bootstrap&logoColor=white">
+            <br><br>
+            <img src="https://img.shields.io/badge/oracle-F80000?style=for-the-badge&logo=oracle&logoColor=white">
+            <br><br>
+            <img src="https://img.shields.io/badge/linux-FCC624?style=for-the-badge&logo=linux&logoColor=black"> 
+            <img src="https://img.shields.io/badge/apache tomcat-F8DC75?style=for-the-badge&logo=apachetomcat&logoColor=white">
+            <br><br>
+            <img src="https://img.shields.io/badge/github-181717?style=for-the-badge&logo=github&logoColor=white">
+            <img src="https://img.shields.io/badge/git-F05032?style=for-the-badge&logo=git&logoColor=white">
+            
           </p>
         </div>
       </div>
@@ -182,9 +199,9 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Happiness <i class="val">99%</i></span>
+            <span class="skill">Happiness <i class="val">1000%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -392,7 +409,7 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Check My Resume</p>
+        <p>나의 일대기</p>
       </div>
 
       <div class="row">
@@ -401,44 +418,54 @@
 
           <h3 class="resume-title">교육</h3>
           <div class="resume-item">
-            <h4>고등학교</h4>
-            <h5>2013 - 2016</h5>
-            <p><em>인천, 삼산고등학교</em></p>
-            <p>중학교때 정보영재교육을 받아 전자기기와 컴퓨터에 관심을 가지게 되었고 <br> 수학에 관심이 있어 이과를 선택했다. 하지만 영어를 잘 하지 못해 많은 난항을 겪으며 대학에 진학하게 되었다.
+            <h4>대학교</h4>
+            <h5>2016.03 - 2021.02</h5>
+            <p><em>한서대학교, 항공전기과</em></p>
+            <p>컴공을 희망했던 어린 아이는 원서지원하기 직전 전자공학과가 컴공보다 실시간 경쟁률이 낮아 그 순간 기지를 발휘해 전자공학과를 지원하게 되었고 합격했습니다.<br> 이후 술에 눈을 뜨게 되었지만... 군대 다녀온 후 정신 차린 뒤 학점 멘징하느라 뼈빠지게 고생했습니다... <br><br> 군대를 다녀오니 박근혜의 '프라임 사업'을 통해 기존 [전자공학과] -> [항공전기과] 로 이름이 바뀌었고 이는 커리큘럼에도 영향이 있었습니다. 때문에 애매하게 프로그래밍을 배우고 애매하게 전자 전기 교육을 받게 되었습니다. <br><br> 그렇기에 이대론 안되겠다 싶어 4-2학기 당시 프로그래밍 교육을 받고 싶었고 이후 임베디드쪽으로 나아가기 위해 국비교육을 지원하여 7개월간 교육을 받았습니다. <br><br> 이후 임베디드보단 완전한 프로그래밍쪽을 원하게 되어 이번 KOSA 확정형 교육을 수료중입니다.</p>
             </p>
           </div>
           <div class="resume-item">
-            <h4>대학교</h4>
-            <h5>2016 - 2021</h5>
-            <p><em>한서대학교, 항공전기과</em></p>
-            <p>컴공을 희망했던 어린 아이는 지원하기 직전 실시간 경쟁률이 전자공학과가 컴공보다 낮아 그 순간 기지를 발휘해 전자공학과를 지원하게 되었고 합격했다.<br> 이후 술에 눈을 뜨게 되어... 낮은 학점으로 1학년을 마친 터라 군대 다녀온 후 정신 차린 뒤 학점 멘징하느라 뼈빠지게 고생했다... <br><br> 군대를 다녀오니 박근혜의 '프라임 사업'을 통해 기존 [전자공학과] -> [항공전기과] 로 이름이 바뀌었고 이는 커리큘럼에도 영향이 있었다. 때문에 애매하게 프로그래밍을 배우고 애매하게 전자 전기 교육을 받게 되었다. <br><br> 그렇기에 이대론 안되겠다 싶어 4-2학기 당시 프로그래밍 교육을 받고 싶었고 이후 임베디드쪽으로 나아가기 위해 </p>
+            <h4>고등학교</h4>
+            <h5>2013.03 - 2016.02</h5>
+            <p><em>인천, 삼산고등학교</em></p>
+            <p>중학교때 정보영재교육을 받아 전자기기와 컴퓨터에 관심을 가지게 되었고 <br> 수학에 관심이 있어 이과를 선택했습니다. 하지만 영어를 잘 하지 못해 많은 난항을 겪으며 대학에 진학하게 되었습니다.
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <h3 class="resume-title">경력</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>서울기술교육센터</h4>
+            <h5>2021.10 - 2022.05</h5>
+            <p><em>자율형 IoT기반 Reality AI융합 전문가 과정</em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li> C/C++,Python</li>
+              <li> Embedded Linux 제어 및 개발</li>
+              <li> 크로스컴파일을 통한 Cotex-M4 제어</li>
+              <li> 최종프로젝트 'AI 자동화 간호로봇' 제작</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>인천공항시설관리</h4>
+            <h5>2021.03 - 2021.6</h5>
+            <p><em>인사팀</em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>직원 채용·퇴직</li>
+              <li>인적자원 유출입 관리</li>
+              <li>ERP 사용</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>과외</h4>
+            <h5>2018.01 - 2021.12</h5>
+            <p><em></em></p>
+            <p>
+            <ul>
+              <li>높은성적 유지</li>
+              <li>눈높이 교육을 통한 맞춤형 학습가능</li>
             </ul>
             </p>
           </div>
@@ -464,7 +491,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Lorem Ipsum</a></h4>
+            <h4><a href="#">Lorem Ipsum</a></h4>
             <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
           </div>
         </div>
@@ -472,7 +499,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
+            <h4><a href="#">Sed ut perspiciatis</a></h4>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
           </div>
         </div>
