--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -92,6 +92,58 @@
 
       </div>
     </div><!-- End Portfolio Details -->
+    <!-- ======= Portfolio Details ======= -->
+    <div id="portfolio-details" class="portfolio-details">
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-lg-8">
+            <h2 class="portfolio-title">A.I 언택트 간호로봇</h2>
+
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-1.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-2.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <video src="assets/img/portfolio/portfolio-details-3.mp4" controls></video>
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+
+          </div>
+
+          <div class="col-lg-4 portfolio-info">
+            <h3>Project information</h3>
+            <ul>
+              <li><strong>asd</strong>: A.I 언택트 asd간호로봇</li>
+              <li><strong>기asd관</strong>: 서울기술asd교육센터</li>
+              <li><strong>기sad간</strong>: 2022.03asd.11 ~ 2022.03.31</li>
+            </ul>
+            <p><strong>작품개asd요</strong></p>
+            <p>
+            무인 자율주행 시스템을asdasd 활용하여 혈압 측정 등 간단하게 건강 체크할 수 있는 로봇 개발
+            </p>
+            <p><strong>담당역asd할</strong></p>
+            <li>사용자용 GasdUI 프로그램 제작</li>
+            <li>사람 인식asd 프로그램 제작</li>
+            <li>보드 간 데asd이터 통신 구현</li>
+            
+          </div>
+
+        </div>
+
+      </div>
+    </div><!-- End Portfolio Details -->
 
   </main><!-- End #main -->
 
