포트폴리오 업데이트

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio</title>
+  <title>🌰밤종이의 포트폴리오</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -576,13 +576,13 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="" style="width: 70%; display: block; margin: 0 auto;">
             <div class="portfolio-info">
               <h4>클라우드  이노베이션 컨테스트<br>(클라우드를 부탁해)</h4>
               <p>수상</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2_high.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details1.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox1" title="Portfolio Details1"><!--<i class="bx bx-link">--></i></a>
+                <a href="portfolio-details_1.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox1" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
